--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+  <!-- Chrome, Firefox OS & Opera -->
   <meta name="theme-color" content="#000000">
+  <!-- Safari/iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <!--
-    manifest.json provides metadata used when your web app is added to the
-    homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-  -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link href="%PUBLIC_URL%/estrella.png" rel="apple-touch-icon" />
+
   <link rel="shortcut icon" href="%PUBLIC_URL%/estrella.png">
 
-  <title>Biblioteca Digital de Planeación y Prospectiva de Hidalgo</title>
+  <title>Biblioteca Digital de Planeación</title>
   <!-- Css -->
   <link rel="stylesheet" type="text/css" href="../src/style-index.css">
 
@@ -23,7 +23,6 @@
 
 <body>
   <div id="app"></div>
-
 </body>
 
 </html>
